[gd_scene load_steps=6 format=3 uid="uid://cqr51nf61x4gx"]

[ext_resource type="Script" path="res://Echoes/no_shadder_sun_light.gd" id="1_15a61"]
[ext_resource type="Texture2D" uid="uid://4bqca6cktlpg" path="res://Assets/circle.png" id="2_ypkds"]
[ext_resource type="AudioStream" uid="uid://bosvv0x73ar20" path="res://Assets/Sons/Chant_souvenir_lumiere.wav" id="3_q5kha"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7bckf"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_gfhw5"]
radius = 16.0

[node name="Sun" type="Area2D" groups=["collectable"]]
scale = Vector2(0.85, 0.85)
script = ExtResource("1_15a61")

[node name="SunSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
material = SubResource("CanvasItemMaterial_7bckf")
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ypkds")

[node name="SunSprite2" type="Sprite2D" parent="."]
modulate = Color(1, 0.803922, 0.0235294, 1)
material = SubResource("CanvasItemMaterial_7bckf")
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ypkds")

[node name="SunSprite3" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
material = SubResource("CanvasItemMaterial_7bckf")
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ypkds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_gfhw5")

[node name="Chant" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q5kha")
